MacViews: Ensure the page info button highlight tracks permission bubbles.

cl format


cl format


Test


Mostly fixee

Bug: 752900
Change-Id: I8650a4155e28b96cfcc15b6e20d18a74424bb372