chrome/browser/ui/cocoa/bubble_anchor_helper_views.h
@@ -26,4 +26,9 @@ LocationBarDecoration* GetPageInfoDecoration(gfx::NativeWindow window);
 void KeepBubbleAnchored(views::BubbleDialogDelegateView* bubble,
                         LocationBarDecoration* decoration = nullptr);
 
+// Simplified version of KeepBubbleAnchored() for bubbles that manage their own
+// anchoring. Causes |decoration| to be set active until |bubble| is closed.
+void TrackBubbleState(views::BubbleDialogDelegateView* bubble,
+                      LocationBarDecoration* decoration);
+
 #endif  // CHROME_BROWSER_UI_COCOA_BUBBLE_ANCHOR_HELPER_VIEWS_H_
