chrome/browser/ui/cocoa/location_bar/location_bar_decoration.h
@@ -19,6 +19,10 @@ namespace gfx {
 struct VectorIcon;
 }
 
+namespace test {
+class LocationBarDecorationTestApi;
+}
+
 // Base class for decorations at the left and right of the location
 // bar.  For instance, the location icon.
 
@@ -191,6 +195,8 @@ class LocationBarDecoration {
                    CGFloat alpha) const;
 
  private:
+  friend class test::LocationBarDecorationTestApi;
+
   // Called when the state of the decoration is updated.
   void UpdateDecorationState();
 
